--- a/flut_micro_app_home/assets/lang/pt_BR.json
+++ b/flut_micro_app_home/assets/lang/pt_BR.json
@@ -1,3 +1,7 @@
 {
-    "welcome": "Bem vindo!"
+    "home-specialOffers-title-item-1": "Vinhos",
+    "home-specialOffers-title-item-2": "Cervejas",
+    "home-sectionTitle-seeMore": " Veja mais",
+    "home-specialOffers-title": " Ofertas especiais",
+    "home-specialOffers-brands": "%s Oferta(s)"
 }
