configurando modulo home

--- a/flut_micro_app_home/assets/lang/pt_BR.json
+++ b/flut_micro_app_home/assets/lang/pt_BR.json
@@ -3,5 +3,8 @@
     "home-specialOffers-title-item-2": "Cervejas",
     "home-sectionTitle-seeMore": " Veja mais",
     "home-specialOffers-title": " Ofertas especiais",
-    "home-specialOffers-brands": "%s Oferta(s)"
+    "home-specialOffers-brands": "%s Oferta(s)",
+    "home-popularProducts-title": "Produtos populares",
+    "home-announcement-1-title": "Surpresa de verão",
+    "home-announcement-1-subTitle": "Cashback 20%"
 }
